add answers from tech team

--- a/dropout_analysis_course_2-3.ipynb
+++ b/dropout_analysis_course_2-3.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Modeling and Predicting Student Dropout in Yiya Air Science Courses\n",
     "\n",
-    "In this project, our first aim to identify the points in the Yiya Air Science courses 2 and 3 where students dropout. There are different ways extents and ways to measure drop out. For example, dropout can be defined as a:\n",
+    "In this project, our first aim to identify the points in the Yiya Air Science courses 2 and 3 where students dropout. There are different ways extents and ways to measure drop out. For example, dropout metrics we try to preedict can be defined as a:\n",
     "1. **Usage Gap**, where the time since the students last response is more than a certain amount of days e.g (e.g more than 7 days since last response). This can be seen as students being \"on track\" or \"behind\". We'll know if a user has performed a usage gap if the time between their most recent and last response to the system is more than N days. A reasonable value for N would be 7 days because the course modules are delivered weekly.\n",
     "    - Alternatively, a usage gap can be defined as a user not sending any message to the system within a certain week.\n",
     "    - Usage Gap = 1, if R2 - R1 > 7 days AND user_tasks < tasks_released, where R2= time of response 2, R1 = time of response 1\n",
@@ -16,7 +16,6 @@
     "    `if (date_of_response_2 - date_of_response_1) > 7_days AND user_completed_tasks < tasks_released:`\n",
     "        \n",
     "        usage_gap == 1\n",
-    "\n",
     "\n",
     "2. **Total Question Stop**, where a student stops submitting scored_problems in the course before completing all tasks [(Borella, et al., 2019)](https://mitili.mit.edu/sites/default/files/project-documents/a24-Borrella_Caballero_Ponce_2019.pdf)\n",
     "    - Total Question Stop = 1, if R2 - R1 > 7 days AND user_scored_problems < 50%_of_scored_problems_released, where R2= time of response 2, R1 = time of response 1\n",
@@ -56,7 +55,14 @@
     "    - payment survey question - Required question in the response table. Shariffa will share the key. \n",
     "    \n",
     "Note about \"effect of payment\": The date at which non-paid users lost access to course 3 was [*To be confirmed by yiya team, date was potentially nov 4th*]\n",
-    "Some required questions have required in their key?"
+    "Some required questions have required in their key?\n",
+    "\n",
+    "Our final aim and outcome for prediction is completion. Yiya as different levels of completion:\n",
+    "- The *standard completion* for Yiya is that a user:\n",
+    "    - Attempted at least 60% of lesson questions\n",
+    "    - Attempted at least 40% of tests\n",
+    "- The *certificate of completion criteria* is:\n",
+    "    - "
    ]
   },
   {
@@ -861,7 +867,7 @@
     "- `content_id` = foreign key link to content table\n",
     "-  `header` = cannot be understood from sample\n",
     "\n",
-    "The status and header field need further exploration."
+    "The status and header field need further exploration. Outbounds are logged when studnets are contacted/ contact initiated by Yiya. "
    ]
   },
   {
@@ -1112,7 +1118,9 @@
    "source": [
     "## Inbound Table\n",
     "\n",
-    "Let's look at the inbound table. There may not be a much to leverage, but a quick look may be useful. "
+    "Let's look at the inbound table. There may not be a much to leverage, but a quick look may be useful. \n",
+    "Fields\n",
+    "- text: raw informaiton that shows the option users actually selected. It is hashed but an example is a, b, or c`. Some user personal data was included so it was hashed. David may send an updated version that only hashes personal information. "
    ]
   },
   {
@@ -1228,7 +1236,7 @@
     "## Channel Table\n",
     "**TODO:** Identify the purpose of the channel table. `channel`- **TECH TEAM INPUT NEEDED:** *the purpose of this table is unclear to the author of this notebook at time of writing*\n",
     "\n",
-    "Let's explore the channel table."
+    "Let's explore the channel table. There's a channel for each kind. There is an incoming channel for whatsapp for course 4. If you want to know how many ronbocalls a user did you can use channel and telecomsession will tell how long the channel was used."
    ]
   },
   {
@@ -1350,7 +1358,7 @@
     "- user_id, which is id of user\n",
     "- kind, which describes the \n",
     "- enabled, which seems to be a true of false value. **TODO:** Investigate the un\n",
-    "- phone - phone number of user contacted? **TODO** Verify this description with tech team\n",
+    "- phone - phone number is the same as phone in user table.\n",
     "- state - **TODO:** Verify the description of this field with tech team.\n",
     "- task - **TODO:** Verify the description of this field with tech team.\n",
     "\n",
@@ -1655,7 +1663,9 @@
     "\n",
     "### Analysis Questions\n",
     "- What kind of channels are used most?\n",
-    "- Do student who listen to audio at a higher rate persist better? - Data needs to be combined to answer this question."
+    "- Do student who listen to audio at a higher rate persist better? - Data needs to be combined to answer this question.\n",
+    "\n",
+    "USSD are initiatied by studnets. SMS initiated by Yiya. Robocalls are initiated by Yiya. Robocalls several purposes. Robocalls go out every week as a preview to lessons with at least 1. More information in the schedules. It only logs robocall when users pick up. "
    ]
   },
   {
@@ -1754,7 +1764,7 @@
    "metadata": {},
    "source": [
     "# User Table\n",
-    "Let's explore the user table."
+    "Let's explore the user table. "
    ]
   },
   {
@@ -1873,10 +1883,60 @@
     "- `phone` VARCHAR(255) = hashed phone number ***TODO:*** Ask, Do the same phone numbers get hashed to the same value?\n",
     "- `type` TINYINT(1) = according to the ERD diagram there is a type field, but it does not exist here. **TODO:** Why?\n",
     "- `tester` TINYINT(1) = binary flag to indicate whether a user account is a tester or not. ***TODO:*** Where do testers comes from? Are they created in the simulator?\n",
-    "- `active` TINYINT(1) \n",
+    "- `active` TINYINT(1) = active column had a different purpose in course 2. It showed students who active within particular time frame. There was no registration cap on course 2. In course 3, it marks users who met the cap after registration.  \n",
     "- `opt_out` DATETIME = date when a user selected to stop receiving messages.\n",
     "\n",
     "Let's explore these fields in more depths."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(77176, 6)\n",
+      "76795\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Is the same phone number hashed the same way for different users? - \n",
+    "# David will conduct a test query to see if there is a repeat. \n",
+    "\"\"\"\n",
+    "Scenario where users can have different id but same phone number\n",
+    "1. if a user opts out and then registers they will have a new id, but the same phone number\n",
+    "\n",
+    "If the change hash is happening on an opted out number\n",
+    "\"\"\"\n",
+    "print(user_df.shape)\n",
+    "print(user_df[\"phone\"].nunique())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task Table\n",
+    "Course III Schedules for Registered:\n",
+    "https://live.airscience.yiyasolutions.org/simulator/schedules"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Telecom\n",
+    "\n",
+    "- Status:\n",
+    "    - not answered: connected but user didn't pick up\n",
+    "    - succeeded:  user picked up\n",
+    "    - failed: call did not connect"
    ]
   },
   {
