update usage gap prediction description

--- a/dropout_analysis_course_2-3.ipynb
+++ b/dropout_analysis_course_2-3.ipynb
@@ -4107,7 +4107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Many user initiated sessions are very short with 50% of them lasting less than a second with the longest session.. If necessary, we can filter for sessions longer than 1 second to avoid sessions the may be triggered by"
+    "Many user initiated sessions are very short with 50% of them lasting less than a second with the longest session.. If necessary, we can filter for sessions longer than 1 second to avoid sessions the may be triggered by... TODO: Ask Tech team what triggers end of session."
    ]
   },
   {
@@ -4911,7 +4911,9 @@
     "- user_id INT (FK) - identifier for user\n",
     "- key VARCHAR(255) - unique identifier and endpoint for question\n",
     "- value VARCHAR(255) - option selected by user\n",
-    "- correct TINYINT(1) - whether response was correct. "
+    "- correct TINYINT(1) - whether response was correct. \n",
+    "\n",
+    "Things like \"course-spring-2021/step-2-investigate/step-2-lesson-4/go-to-questions#q1\" is a redundant state. Go to questions connects to a child page. Test questions are primary pages. \n"
    ]
   },
   {
@@ -5139,6 +5141,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prediciting Dropout (Pariticpation in the Next Week)\n",
+    "- Regression on how many times a user will use the system in the next week\n",
+    "- AS a classier: Are they going to interact? Yes or No, or interaction class (High, Low, Medium)\n",
+    "- As a linear regression: \n",
+    "\n",
+    "Note Choosing features:\n",
+    "- Maybe try a lasso regression to minimize errors due to feature dependence\n",
+    "- Try normalizing by the amount of questions in the unit in the time period\n",
+    "- \n",
+    "\n",
+    "We may need to aggregate and group the usage of each user into a time series forcasting model or regression on each group.\n"
+   ]
   },
   {
    "attachments": {},
