make intial gap predictions

--- a/dropout_analysis_course_2-3.ipynb
+++ b/dropout_analysis_course_2-3.ipynb
@@ -6107,6 +6107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Predictions\n",
     "Now that we have created a user week for each user, we'll can try to predict whether a user_week summary precedes a usage gap."
    ]
   },
